update choice and delete

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -21,34 +21,31 @@
 		</a>
 	</div>
 
-	<img src="../img/bg/modal1.png" class="frame" style="width: 700px;" />
 	<img src="../img/heading/heading.png" class="center" style="width:700px;top:100px" alt="Memory Booth" />
+
+	<img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 
 	<div class="row align-items-center justify-content-center choice-container">
 		<div class="col-md-12 my-auto" style="text-align: center; ">
-			<h1 style="color:white; margin-top: 250px;">Save your memory?</h1>
+			<h1 style="color:white; margin-top: 225px;">Save your memory?</h1>
 			<div class="button-container">
-				<a href="delete.html" style="text-decoration: none;">
-					<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
-						<div class="button-text-light" style="top:2px; color:white" id="dont-save">
-							Don't Save</div>
-					</div>
-				</a>
 
-				<a href="record_memory.html" style="text-decoration: none;">
-					<div class="svg-wrapper-light choice-button-narrow" style="border: solid 5px var(--cpurple);">
-						<div class="button-text-light" style="top:2px; color:white" id="cancel">
-							Cancel</div>
-					</div>
-				</a>
-
-				<a href="choice_childhood.html" style="text-decoration: none;">
+				<a href="save.php" style="text-decoration: none;">
 					<div class="svg-wrapper-light cyan choice-button-narrow" style="border: solid 5px var(--ccyan);"
 						onclick="window.location.href = 'animation.html'">
 						<div class="button-text-light" style="top:2px; color:white" id="save">
 							Save</div>
 					</div>
 				</a>
+
+				<a href="delete.html" style="text-decoration: none;">
+					<div class="svg-wrapper-light choice-button-narrow" style="border: solid 5px var(--cpurple);">
+						<div class="button-text-light" style="top:2px; color:white" id="cancel">
+							Delete</div>
+					</div>
+				</a>
+
+
 			</div>
 		</div>
 		<div class="col-md-12 my-auto" style="text-align: center;" id="gif-container">
