--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Memory Booth</title>
+  <title>Home - Memory Booth</title>
+  <link rel="icon" href="../img/cd/CD-childhood.png">
+
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
