--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Introduction Video - Memory Booth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
