choice page 2 buttons and responsive

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -21,69 +21,52 @@
 		</a>
 	</div>
 
-	<img src="../img/bg/modal1.png" class="frame" style="width: 700px;" />
-	<img src="../img/heading/heading.png" class="center" style="width:700px;top:100px" alt="Memory Booth" />
+	<div class="question-container">
+		<img src="../img/bg/modal1.png" class="frame" style="width: 700px;" />
+		<img src="../img/heading/heading.png" class="center heading" alt="Memory Booth" />
 
-	<div class="row align-items-center justify-content-center choice-container">
-		<div class="col-md-12 my-auto" style="text-align: center; ">
-			<h1 style="color:white; margin-top: 250px;">Save your memory?</h1>
-			<div class="button-container">
-				<a href="delete.html" style="text-decoration: none;">
-					<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
-						<div class="button-text-light" style="top:2px; color:white" id="dont-save">
-							Don't Save</div>
-					</div>
-				</a>
+		<div class="row align-items-center justify-content-center choice-container">
+			<div class="col-md-12 my-auto" style="text-align: center; ">
+				<h1>Save your memory?</h1>
+				<div class="button-container">
 
-				<a href="record_memory.html" style="text-decoration: none;">
-					<div class="svg-wrapper-light choice-button-narrow" style="border: solid 5px var(--cpurple);">
-						<div class="button-text-light" style="top:2px; color:white" id="cancel">
-							Cancel</div>
-					</div>
-				</a>
 
-				<a href="choice_childhood.html" style="text-decoration: none;">
-					<div class="svg-wrapper-light cyan choice-button-narrow" style="border: solid 5px var(--ccyan);"
-						onclick="window.location.href = 'animation.html'">
-						<div class="button-text-light" style="top:2px; color:white" id="save">
-							Save</div>
-					</div>
-				</a>
+					<a href="choice_childhood.html" style="text-decoration: none;">
+						<div class="svg-wrapper-light cyan choice-button-wide style=" border: solid 5px var(--ccyan)"
+							onclick="window.location.href = 'animation.html'">
+							<div class="button-text-light" style="top:5px; color:var(--ccyan)" id="save">
+								Save</div>
+						</div>
+					</a>
+
+					<a href="delete.html" style="text-decoration: none;">
+						<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
+							<div class="button-text-light" style="top:2px; color:var(--cpurple)" id="dont-save">
+								Don't Save</div>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-12 my-auto" style="text-align: center;" id="gif-container">
 			</div>
 		</div>
-		<div class="col-md-12 my-auto" style="text-align: center;" id="gif-container">
-		</div>
 	</div>
-
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 
 	<script>
 
-		var audio_dontsave = new Audio("../img/audio/dontsave_sound.wav");
-		var audio_cancel = new Audio("../img/audio/cancel_sound.wav");
-		var audio_save = new Audio("../img/audio/save_sound.wav");
+		var audio_dontsave = new Audio("../img/audio/dontsave_sound_mp3.mp3");
+		var audio_save = new Audio("../img/audio/save_sound_mp3.mp3");
 
 		$("#dont-save").hover(
 			function () {
-				$("#gif-container").append('<img class="center append-img" id="tmp-img1" src="../img/gif/dontsave.gif">');
+				$("#gif-container").append('<img class="center append-img" id="tmp-img1" src="../img/gif/cancel.gif">');
 				audio_dontsave.play();
 				audio_dontsave.loop = true;
 			},
 			function () {
 				$("#tmp-img1").remove();
 				audio_dontsave.pause();
-			}
-		);
-
-
-		$("#cancel").hover(function () {
-			$("#gif-container").append('<img class="center append-img" id="tmp-img2" src="../img/gif/cancel.gif">');
-			audio_cancel.play();
-			audio_cancel.loop = true;
-		},
-			function () {
-				$("#tmp-img2").remove();
-				audio_cancel.pause();
 			}
 		);
 
