--- a/ui/choice.html
+++ b/ui/choice.html
@@ -11,6 +11,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/choice.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 <body id="body3">
