--- a/ui/choice.html
+++ b/ui/choice.html
@@ -23,23 +23,21 @@
 	</div>
 
 	<div class="question-container">
-		<img src="../img/bg/modal1.png" class="frame" style="width: 700px;" />
+		<img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 		<img src="../img/heading/heading.png" class="center heading" alt="Memory Booth" />
 
 		<div class="row align-items-center justify-content-center choice-container">
 			<div class="col-md-12 my-auto" style="text-align: center; ">
 				<h1>Save your memory?</h1>
+
 				<div class="button-container">
-
-
-					<a href="choice_childhood.html" style="text-decoration: none;">
-						<div class="svg-wrapper-light cyan choice-button-wide style=" border: solid 5px var(--ccyan)"
+					<a href="save.php" style="text-decoration: none;">
+						<div class="svg-wrapper-light cyan choice-button-wide" style=" border: solid 5px var(--ccyan)"
 							onclick="window.location.href = 'animation.html'">
 							<div class="button-text-light" style="top:5px; color:var(--ccyan)" id="save">
 								Save</div>
 						</div>
 					</a>
-
 					<a href="delete.html" style="text-decoration: none;">
 						<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
 							<div class="button-text-light" style="top:2px; color:var(--cpurple)" id="dont-save">
@@ -47,6 +45,7 @@
 						</div>
 					</a>
 				</div>
+
 			</div>
 			<div class="col-md-12 my-auto" style="text-align: center;" id="gif-container">
 			</div>
