--- a/ui/delete.html
+++ b/ui/delete.html
@@ -10,6 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/choice.css">
 
@@ -38,18 +39,18 @@
 
         <div class="button-container">
 
-          <button id = "delete-button" onclick = "deleteMem()" class="svg-wrapper-light cyan choice-button" style="border: solid 5px var(--ccyan); margin: 400px 0">
+          <button id = "delete-button" onclick = "deleteMem()" class="svg-wrapper-light cyan choice-button-wide" style="border: solid 5px var(--ccyan); margin: 400px 0">
               <div class="button-text-light" style="top:0px; color:white">
                   Delete</div>
         </button>
 
-          <button id = "back-button" onclick = "window.location.href = 'choice.html'"class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple);">
+          <button id = "back-button" onclick = "window.location.href = 'choice.html'"class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
               <div class="button-text-light" style="top:0px; color:white">
                   Back</div>
           </button>
 
             <a id = "home-link" href = "memory_list.php">
-              <div class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple); margin: 400px 0">
+              <div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple); margin: 400px 0">
                   <div class="button-text-light" style="top:5px; color:white">
                       Home</div>
               </div>
