--- a/ui/record_memory.html
+++ b/ui/record_memory.html
@@ -12,27 +12,28 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/style.css">
-<link rel="stylesheet" href="../css/style_also_old.css">
+<!-- <link rel="stylesheet" href="../css/style_also_old.css"> -->
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 
-<body id="body-general">
+<body class="body-common">
 	<div class="container center-form">
 		<div class="row mx-auto text-center">
-			<div class="col-md-12 col-sm-6 my-auto">
+			<div class="col-sm-12 col-xs-6 my-auto">
 				<img src="../img/heading/heading.png" style="height: 120px; background-color: transparent;" alt="" />
 
 
-				<form action = "your_memory.php" onsubmit="return checkForm()" method="post" class="justify-content-center radio-form">
+				<form action="your_memory.php" onsubmit="return checkForm()" method="post"
+					class="justify-content-center radio-form">
 
 					<div class="form-group">
 						<input class="form-control memory-name" type="text" name="name" id="name" placeholder="Name" />
-							<span class="error">
-								<p id="name_error"></p>
-							</span>
+						<span class="error">
+							<p id="name_error"></p>
+						</span>
 					</div>
 
 					<div class="form-group  category-options">
@@ -43,8 +44,7 @@
 							<label class="form-check-label" for="childhood">Childhood</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" name="category" id="travel"
-								value="travel">
+							<input class="form-check-input" type="radio" name="category" id="travel" value="travel">
 							<label class=" form-check-label" for="travel">Travel</label>
 						</div>
 						<div class="form-check form-check-inline">
@@ -53,8 +53,8 @@
 							<label class="form-check-label" for="student-life">Student Life</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" name="category" id="others"
-								value="others" checked="checked">
+							<input class="form-check-input" type="radio" name="category" id="others" value="others"
+								checked="checked">
 							<label class="form-check-label" for="others">Other</label>
 
 						</div>
@@ -65,14 +65,14 @@
 					</span>
 
 					<div class="form-group">
-						<textarea class="form-control memory-content" name = "memory" id="memory" rows="5"
+						<textarea class="form-control memory-content" name="memory" id="memory" rows="5"
 							placeholder="Write your memory here..."></textarea>
 						<span class="error">
 							<p id="memory_error"></p>
 						</span>
 					</div>
 
-					<button type="submit" name = "submit" class="btn-control submit" id = "submit">
+					<button type="submit" name="submit" class="btn-control submit" id="submit">
 						GO!</button>
 
 				</form>
@@ -83,48 +83,42 @@
 	</div>
 
 	<script>
-		function checkForm()
-		{
+		function checkForm() {
 			document.getElementById("name_error").innerHTML = '';
 			document.getElementById("memory_error").innerHTML = '';
-			var name =	document.getElementById("name").value;
+			var name = document.getElementById("name").value;
 			var memory = document.getElementById("memory").value;
 
-			if (name == '')
-			{
-				if (memory == '')
-				{
-					  document.getElementById("name_error").innerHTML = "Please enter a name. It doesn't have to be your real name!";
-						document.getElementById("memory_error").innerHTML = "Please enter your memory!";
-						return false;
-				}
+			if (name == '') {
+				if (memory == '') {
 					document.getElementById("name_error").innerHTML = "Please enter a name. It doesn't have to be your real name!";
-					return false;
-			}
-
-			if (memory == '')
-			{
-				if (name == '')
-				{
-					  document.getElementById("memory_error").innerHTML = "Please enter your memory!";
-						document.getElementById("name_error").innerHTML = "Please enter a name. It doesn't have to be your real name!";
-						return false;
-				}
-
 					document.getElementById("memory_error").innerHTML = "Please enter your memory!";
 					return false;
+				}
+				document.getElementById("name_error").innerHTML = "Please enter a name. It doesn't have to be your real name!";
+				return false;
 			}
-			else
-			{
+
+			if (memory == '') {
+				if (name == '') {
+					document.getElementById("memory_error").innerHTML = "Please enter your memory!";
+					document.getElementById("name_error").innerHTML = "Please enter a name. It doesn't have to be your real name!";
+					return false;
+				}
+
+				document.getElementById("memory_error").innerHTML = "Please enter your memory!";
+				return false;
+			}
+			else {
 				jumpToStart();
 			}
-			}
+		}
 
-			function jumpToStart() {
-				window.location.href = 'your_memory.php';
-				localStorage.setItem('type', $("input[name='category']:checked").val())
+		function jumpToStart() {
+			window.location.href = 'your_memory.php';
+			localStorage.setItem('type', $("input[name='category']:checked").val())
 
-			}
+		}
 
 
 	</script>
