change choice button color to white

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -34,7 +34,7 @@
 					<a href="save.php" style="text-decoration: none;">
 						<div class="svg-wrapper-light cyan choice-button-wide" style=" border: solid 5px var(--ccyan)"
 							onclick="window.location.href = 'animation.html'">
-							<div class="button-text-light" style="top:5px; color:var(--ccyan)" id="save">
+							<div class="button-text-light" style="top:2px; color:white" id="save">
 								Save</div>
 						</div>
 					</a>
