choice.css related pages responsive

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -16,15 +16,22 @@
 
 <body id="body3">
 
-	<div class="nav">
-		<a href="menu.html">
-			<img class="nav" src="img/button/close.png" style="width: 30px;" alt="" />
+	<div class="backicon-fixed">
+		<a href="memory_list.php">
+			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+				p-id="1479" width="48" height="48">
+				<path
+					d="M960.243 456.737v110.526h-682.875l312.547 315.789-78.793 78.948-449.121-450 449.122-450 81.419 78.948-315.173 315.789h682.875z"
+					p-id="1480" fill="var(--ccyan)"></path>
+			</svg>
 		</a>
 	</div>
 
 	<div class="question-container">
 		<img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
-		<img src="../img/heading/heading.png" class="center heading" alt="Memory Booth" />
+		<a href="memory_list.php">
+			<img src="../img/heading/heading.png" class="center heading" alt="Memory Booth" />
+		</a>
 
 		<div class="row align-items-center justify-content-center choice-container">
 			<div class="col-md-12 my-auto" style="text-align: center; ">
