--- a/ui/save.html
+++ b/ui/save.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Choice-Childhood</title>
+    <title>Save Memory</title>
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="../img/cd/CD-childhood.png">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/choice.css">
 
@@ -37,41 +39,49 @@ file_put_contents('../../json/memories.json', $encodedArray);
 ?>
 
 <body id="body3">
-    <div class="nav">
-        <a href="memory_list.php">
-            <img class="nav" src="../img/button/close.png" style="width: 30px;" alt="" />
+    <div class="backicon-fixed">
+        <a href="choice.html">
+            <svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                p-id="1479" width="48" height="48">
+                <path
+                    d="M960.243 456.737v110.526h-682.875l312.547 315.789-78.793 78.948-449.121-450 449.122-450 81.419 78.948-315.173 315.789h682.875z"
+                    p-id="1480" fill="var(--ccyan)"></path>
+            </svg>
         </a>
     </div>
+
     <div class="row align-items-center justify-content-center choice-container">
-        <div class="col-sm-12" style="text-align: center;">
-            <img src="../img/heading/heading.png" class="center" style="width: 600px; padding-top:100px"
-                alt="Memory Booth" />
-        </div>
+
+        <img src="../img/heading/heading.png" class="center" id="logo" style="width:700px;top:100px"
+            alt="Memory Booth" />
+
 
         <img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 
         <div class="gif-container center">
-            <img id = "save-gif" src = '<?php echo $save_gif_string ?>' style="width: 400px;" />
+            <img id="save-gif" src='<?php echo $save_gif_string ?>' style="width: 400px;" />
         </div>
 
         <div>
-            <h1 class="center" style="top:40%">Save successful.</h1>
+            <h1 class="center" style="top:35%;width:100%">Save successful.</h1>
         </div>
 
-        <div class="button-container">
-            <a id = "memory-link" href = "view_memory.php">
-              <div class="svg-wrapper-light cyan choice-button" style="border: solid 5px var(--ccyan);">
-                  <div class="button-text-light" style="top:5px; color:white">
-                      View Memory</div>
-              </div>
-            <a>
+        <div class="button-container" id="button-container" style="margin-top:250px">
+            <a id="memory-link" href="view_memory.php">
+                <div class="svg-wrapper-light cyan choice-button-wide"
+                    style="border: solid 5px var(--ccyan);width:220px;">
+                    <div class="button-text-light" style="top:2px; color:white">
+                        View Memory</div>
+                </div>
+                <a>
 
-            <a id = "home-link" href = "memory_list.php">
-              <div class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple);">
-                  <div class="button-text-light" style="top:5px; color:white">
-                      Home</div>
-              </div>
-            <a>
+                    <a id="home-link" href="memory_list.php">
+                        <div class="svg-wrapper-light choice-button-wide"
+                            style="border: solid 5px var(--cpurple);width:220px;">
+                            <div class="button-text-light" style="top:2px; color:white">
+                                Home</div>
+                        </div>
+                        <a>
 
         </div>
 
