added Ziying's back button to more pages

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -15,9 +15,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 <body id="body3">
-
+<!--
 	<div class="backicon-fixed">
-		<a href="memory_list.php">
+		<a href="your_memory.php">
 			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
 				p-id="1479" width="48" height="48">
 				<path
@@ -25,7 +25,7 @@
 					p-id="1480" fill="var(--ccyan)"></path>
 			</svg>
 		</a>
-	</div>
+	</div>-->
 
 	<div class="question-container">
 		<img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
