--- a/ui/index.html
+++ b/ui/index.html
@@ -19,16 +19,6 @@
   <div class="center" style="top:380px">
     <img src="../img/heading/heading.png" style="width: 1000px" alt="title" />
 
-
-    <!--
-  <div>
-    <button class="button1" type="button"><a href="category.html"> <img src="../img/button/purple_button_start.png"
-          style="width: 230px; " alt="" /></a>
-    </button>
-  </div>
--->
-
-
     <a href="introduction.html">
       <div class="svg-wrapper">
         <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +30,7 @@
           </defs>
           <rect class="shape" height="60" width="320" stroke="url(#gradient)" />
         </svg>
-        <div class="button-text">START</div>
+        <div class="button-text">ENTER</div>
       </div>
     </a>
   </div>
