added tab icon and back button to pages

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home - Memory Booth</title>
-  <link rel="icon" href="../img/cd/CD-childhood.png">
-
+  <link rel="icon" href="../img/tab-icon.png">
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
