--- a/ui/record_memory.html
+++ b/ui/record_memory.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Add Your Memory - Memory Booth</title>
+	<link rel="icon" href="../img/tab-icon.png">
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,7 @@
 
 <body class="body-common">
 
-	<div class="backicon-fixed">
+	<div class="backicon-fixed" style="margin: 20px 20px">
 		<a href="memory_list.php">
 			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
 				p-id="1479" width="48" height="48">
