--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="icon" href="../img/tab-icon.png">
 <body>
 
     <div class="videoBgWrapper">
