--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
   <link rel="stylesheet" href="../css/about_us.css">
-
+  <link rel="icon" href="../img/tab-icon.png">
 </head>
 
 <body id="body3">
