--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
 <body id="body">
 
   <div class="center" style="top:380px">
-    <img src="../img/heading/heading.png" style="width: 1000px" alt="title" />
+    <img src="../img/heading/heading.png" style="width: 100vw" alt="title" />
 
 
     <!--
