about_us hover and responsive

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About Us</title>
+  <title>About My Creators</title>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
   </style>
@@ -12,46 +12,114 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/about_us.css">
+  <link rel="stylesheet" href="../css/izmir.min.css">
 </head>
 
-<body id="body3">
-  <div class="nav">
-    <a href="menu.html">
-      <img class="nav" src="../img/button/narv.png" style="width: 50px;" alt="" />
-    </a>
-  </div><br><br>
+<body id="about-us">
+
+  <div class="member-content-head">
+    <p>About My Creator</p>
+  </div>
+
   <div>
-    <div class="member-content-head">
-      <P>
-        About Our Website
-      </p>
-      <br>
-    </div>
+    <p class="member-content">
+      Here is description.
+      <!-- Our website is an archive of memory which imagines what it’s like inside the mental architecture of AI.
+      <br /><br />
+      You are drawn into the world from the perspective of the AI interface, IAIN. Exploring the digital
+      archive, you may feel you become lost in this immersive world, populated with other people’s memories. But to
+      become part of the
+      archive and part of this mental architecture your memories first need to be translated from human language into
+      code (AI language). This process generates sound and a unique moving graphic. The result is disjointed,
+      dreamlike, and unfamiliar to us.
+      <br /><br />
+      Dreams are part of how we remember as humans. Imagine if, with the advent of
+      AI, machines will not only be able to think for themselves but to have a subconscious and dream as they process,
+      learn from, and remember the human world around them, you will begin to enter our world. -->
+    </p>
+  </div>
 
-    <div>
-      <p class="member-content">
-        Our website is an archive of memory which imagines what it’s like inside the mental architecture of AI. You are drawn into the world from the perspective of the AI interface, IAIN. Exploring the digital archive, you may feel you become lost in this immersive world, populated with other people’s memories. But to become part of the archive and part of this mental architecture your memories first need to be translated from human language into code (AI language). This process generates sound and a unique moving graphic. The result is disjointed, dreamlike, and unfamiliar to us. Dreams are part of how we remember as humans. Imagine if, with the advent of AI, machines will not only be able to think for themselves but to have a subconscious and dream as they process, learn from, and remember the human world around them, you will begin to enter our world. 
-      </p>
-    </div>
-    <br><br>
+  <div class="member-photo">
+    <p class="sound-team">Sound team</p>
 
-    <div class="member-photo">
-      <p class="sound-team">Sound team</p>
-      <img class="Carla" src="../img/photo/Carla.png" style="width:18%; margin-left:10vw;" alt="" />
-      <img class="Ali" src="../img/photo/Ali.png" style="width:18%;margin-left:2vw;" alt="" />
-      <img class="Archi" src="../img/photo/Archi.png" style="width:18%;margin-left:2vw;" alt="" />
-      <img class="Felipe" src="../img/photo/Felipe.png" style="width:18%;margin-left:2vw;" alt="" />
-      <br>
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Ali" src="../img/photo/Ali.png" alt="Ali" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Helping with text, concept development, and sound.</h1>
+      </figcaption>
+    </figure>
 
-      <p class="visual-team">Visual team</p>
-      <img class="Chen" src="../img/photo/Chen.png" style="width:18%; margin-left:20vw;" alt="" />
-      <img class="Ge" src="../img/photo/Ge.png" style="width:18%;margin-left:2vw;" alt="" />
-      <img class="Tan" src="../img/photo/Tan.png" style="width:18%;margin-left:2vw;" alt="" />
-      <br>
-      <img class="Wang" src="../img/photo/Wang.png" style="width:18%;margin-left:20vw;margin-top:4vw;" alt="" />
-      <img class="Yan" src="../img/photo/Yan.png" style="width:18%;margin-left:2vw;margin-top:2vw;" alt="" />
-      <img class="Zhang" src="../img/photo/Zhang.png" style="width:18%;margin-left:2vw;margin-top:2vw;" alt="" />
-    </div>
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Archi" src="../img/photo/Archi.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1> Sound Designer and the Voice of Iain.</h1>
+      </figcaption>
+    </figure>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Carla" src="../img/photo/Carla.png" alt="Carla" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Helping with text, concept development, and sound.</h1>
+      </figcaption>
+    </figure>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Felipe" src="../img/photo/Felipe.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Help with sound design for animations and gifs, help in concept investigation.</h1>
+      </figcaption>
+    </figure>
+
+
+
+
+    <p class="visual-team">Visual team</p>
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Chen" src="../img/photo/Chen.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Discover visual elements and make some animations.</h1>
+      </figcaption>
+    </figure>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Ge" src="../img/photo/Ge.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Design the animations, style guide and posters. Take care of advertising.</h1>
+      </figcaption>
+    </figure>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Tan" src="../img/photo/Tan.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Energetic front end developer bouncing back and forth.</h1>
+      </figcaption>
+    </figure>
+
+
+    <br>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Wang" src="../img/photo/Wang.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Helping with text, concept development, and sound.</h1>
+      </figcaption>
+    </figure>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Yan" src="../img/photo/Yan.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Making samples for the front-end and assist in launching pages.</h1>
+      </figcaption>
+    </figure>
+
+    <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
+      <img class="Zhang" src="../img/photo/Zhang.png" />
+      <figcaption class="c4-layout-center-left">
+        <h1>Sound visualisation with p5 and help to build the front-end.</h1>
+      </figcaption>
+    </figure>
+
+  </div>
   </div>
 </body>
 
